--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "sockjs-client": "1.0.3",
     "stomp-websocket": "2.3.4",
     "swagger-ui": "2.1.3",
+    "arrive": "~2.3.0",
     "bootstrap-material-design": "~0.5.7"
   },
   "devDependencies": {
