--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ spring_security_version=4.0.2.RELEASE
 springfox_version=2.0.3
 spring_boot_version=1.3.1.RELEASE
 spring_cloud_version=1.2.0.RELEASE
+usertype_core_version=5.0.0.GA
 h2_version=1.4.188
 
 gatling_version=2.1.7
