--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ dependencies {
     }
     compile group: 'org.hibernate', name: 'hibernate-envers'
     compile group: 'org.hibernate', name: 'hibernate-validator'
-    compile group: 'org.jadira.usertype', name: 'usertype.core', version: usertype_core_version
+    compile group: 'org.jadira.usertype', name: 'usertype.extended', version: usertype_core_version
     compile (group: 'org.liquibase', name: 'liquibase-core', version: liquibase_core_version) {
         exclude(module: 'jetty-servlet')
     }
@@ -168,7 +168,6 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core'
     testCompile group: 'com.mattbertolini', name: 'liquibase-slf4j', version: liquibase_slf4j_version
     testCompile group: 'org.hamcrest', name: 'hamcrest-library'
-    testCompile group: 'org.jadira.usertype', name: 'usertype.core', version: usertype_core_version
 
     testCompile group: 'io.gatling.highcharts', name: 'gatling-charts-highcharts', version: gatling_version
 
