--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "stomp-websocket": "2.3.4",
     "swagger-ui": "2.1.3",
     "arrive": "~2.3.0",
-    "bootstrap-material-design": "~0.5.7"
+    "bootstrap-material-design": "~0.5.7",
+    "angular-nvd3": "~1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
